feat(#142): adding the possibility to invite users when creating group
