# app/middlewares/validationSchema.js
@@ -96,6 +96,7 @@ const createGroupSchema = Joi.object({
     description: Joi.string().max(30).allow('').messages({
         'string.max': LOCALE.groupDescriptionTooLong,
     }),
+    invited_users: Joi.array().items(Joi.string()).optional()
 });
 
 const updateGroupSchema = Joi.object({
